Make sure MARcode lists do not overflow

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -374,26 +374,6 @@ td:focus {
   display: inline-block;
 }
 
-
-/* ==================================
-  Fix scrolling for sidebar
-  ================================== */
-
-.au-c-sidebar {
-  overflow: hidden;
-}
-
-.au-c-sidebar__content {
-  flex-grow: 2;
-  overflow: auto;
-}
-
-.au-c-sidebar__footer {
-  border-top: 1px solid $au-gray-300;
-  flex-grow: 1;
-}
-
-
 /* ==================================
   Remove when mockups are gone
   ================================== */
@@ -407,16 +387,6 @@ a.au-c-button {
     color: $white;
   }
 }
-
-/* ==================================
-  Fix checkbox layout
-  ================================== */
-
-.au-c-checkbox + .au-c-label {
-  display: inline-block;
-  vertical-align: top;
-}
-
 
 /* ==================================
   Fix scrolling for sidebar
